# Simple-rust-server

./: .env  Cargo.toml  README.md
src/: db_models.rs  main.rs  services.rs
static/css/: main.css
templates/: header.html  index.html  layout.html
