[package]
name = "hello-world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
tera = "1"
lazy_static = "1.4.0"
actix-files = "0.6.0"
sqlx = { version = "0.5", features = ["postgres", "runtime-async-std-native-tls"] }
dotenv = "0.15.0"
diesel = { version = "2.1.5", features = ["postgres", "r2d2"] }
chrono = "0.4.37"
actix = "0.13.3"
serde = "1.0.197"
serde_json = "1.0.115"
actix-web-httpauth = "0.8.1"
argonautica = "0.2.0"
hmac = "0.12.1"
jwt = "0.16.0"
sha2 = "0.10.8"
dotenvy = "0.15.7"
